[workspace]
members = ["lib","bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Astrale <ash4567@outlook.fr>"]
rust-version = "1.56"
description = "A soon to be formatter for the typst lang"
readme = "README.md"
repository = "https://github.com/astrale-sharp/typstfmt"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]