[workspace]
members = ["lib"]
resolver = "2"

[workspace.package]
version = "0.2.6"
edition = "2021"
authors = ["Astrale <ash4567@outlook.fr>"]
rust-version = "1.56"
description = "A formatter for Typst-lang with a future!"
readme = "README.md"
repository = "https://github.com/astrale-sharp/typstfmt"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]

[package]
name = "typstfmt"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
typstfmt_lib = { path = "./lib" }
lexopt = "0.3.0"
confy = "0.5.1"
