[package]
name = "typstfmt"
version = "0.2.8"
edition = "2021"
authors = ["Astrale <ash4567@outlook.fr>"]
rust-version = "1.70"
description = "A formatter for Typst-lang with a future!"
readme = "README.md"
repository = "https://github.com/astrale-sharp/typstfmt"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "typstfmt"
[dependencies]
lexopt = "0.3.0"
confy = "0.5.1"
globmatch = "0.2.3"
itertools = "0.10.5"
regex = "1.7.3"
toml = "0.7.3"
tracing = { version = "0.1.37", features = ["attributes"] }
typst-syntax = { git = "https://github.com/typst/typst.git", tag = "v0.10.0" }
serde = { version = "1.0.171", features = ["serde_derive"] }
unicode-width = "0.1.11"

[dev-dependencies]
similar-asserts = "1.4.2"
insta = "1.30.0"
tracing-subscriber = "0.3.17"
[[bin]]
name = "typstfmt"
