[package]
name = "typstfmt_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true


[dependencies]
globmatch = "0.2.3"
itertools = "0.10.5"
regex = "1.7.3"
toml = "0.7.3"
tracing = { version = "0.1.37", features = ["attributes"] }
typst-syntax = { git = "https://github.com/typst/typst.git", tag = "v0.7.0" }
unicode-segmentation = "1.10.1"
serde = { version = "1.0.171", features = ["serde_derive"] }

[dev-dependencies]
similar-asserts = "1.4.2"
insta = "1.30.0"
tracing-subscriber = "0.3.17"
